fix: center two click area button and overflow button

--- a/packages/main/src/themes/TabContainer.css
+++ b/packages/main/src/themes/TabContainer.css
@@ -74,7 +74,6 @@
 }
 
 .ui5-tc__overflow > [ui5-button] {
-	margin-top: 0.25rem;
 	border-radius: 0.75rem;
 	height: 1.5rem;
 }
