--- a/packages/main/src/themes/TabInStrip.css
+++ b/packages/main/src/themes/TabInStrip.css
@@ -57,7 +57,6 @@
 .ui5-tab-expand-button > [ui5-button] {
 	height: 1.5rem;
 	min-width: 1.5rem;
-	margin-top: 0.25rem;
 	margin-inline-start: var(--_ui5_tc_headerItem_expand_button_margin_inline_start);
 	--_ui5_button_border_radius: var(--_ui5_tc_headerItem_expand_button_border_radius);
 	--_ui5_button_focused_border_radius: var(--_ui5_tc_headerItem_expand_button_border_radius);
